Ajout d'un point à la fin des mots-clés

--- a/latex/ressources/R101.tex
+++ b/latex/ressources/R101.tex
@@ -96,4 +96,4 @@ pourront servir de support).}
 }
 
 % Mots-clés
-\ajoutRmotscles{Réseau, Système d'exploitation, \texttt{TCP}/\texttt{IP}, \texttt{LAN}, Hygiène informatique}
+\ajoutRmotscles{Réseau, Système d'exploitation, \texttt{TCP}/\texttt{IP}, \texttt{LAN}, Hygiène informatique.}
