--- a/latex/ressources/R102.tex
+++ b/latex/ressources/R102.tex
@@ -76,4 +76,4 @@ aspects sécurité informatique et réseaux mentionnés en R101 seront
 }
 
 % Mots-clés
-\ajoutRmotscles{Architecture en couches, Topologies, Protocoles, Modèle \texttt{TCP}/\texttt{IP}}
+\ajoutRmotscles{Architecture en couches, Topologies, Protocoles, Modèle \texttt{TCP}/\texttt{IP}.}
