--- a/latex/ressources/R103.tex
+++ b/latex/ressources/R103.tex
@@ -82,4 +82,4 @@ abordées en R101.
 }
 
 % Mots-clés
-\ajoutRmotscles{Réseaux locaux, Ethernet, Commutateurs, Routeurs, \texttt{VLAN}, 8021Q, 8021P, \texttt{STP}, \texttt{RSTP}}
+\ajoutRmotscles{Réseaux locaux, Ethernet, Commutateurs, Routeurs, \texttt{VLAN}, 8021Q, 8021P, \texttt{STP}, \texttt{RSTP}.}
