--- a/latex/ressources/R104.tex
+++ b/latex/ressources/R104.tex
@@ -78,4 +78,4 @@ instruments de mesure et d'interpréter les résultats.}
 }
 
 % Mots-clés
-\ajoutRmotscles{Mesures, Oscilloscope, Voltmètre, Puissance, Dimensionnement, Adaptation d'impédance}
+\ajoutRmotscles{Mesures, Oscilloscope, Voltmètre, Puissance, Dimensionnement, Adaptation d'impédance.}
