--- a/latex/ressources/R105.tex
+++ b/latex/ressources/R105.tex
@@ -58,4 +58,4 @@ transmission.}
 }
 
 % Mots-clés
-\ajoutRmotscles{Supports de transmission (fibre optique, cuivre, radio), Mesures}
+\ajoutRmotscles{Supports de transmission (fibre optique, cuivre, radio), Mesures.}
