--- a/latex/ressources/R106.tex
+++ b/latex/ressources/R106.tex
@@ -60,4 +60,4 @@ permettra aux étudiants de relier ces systèmes au monde extérieur.}
 }
 
 % Mots-clés
-\ajoutRmotscles{Nombres binaires, Codage, Fonctions logiques, Processeur, \texttt{ALU}}
+\ajoutRmotscles{Nombres binaires, Codage, Fonctions logiques, Processeur, \texttt{ALU}.}
