--- a/latex/ressources/R107.tex
+++ b/latex/ressources/R107.tex
@@ -81,4 +81,4 @@ L'utilisation de l'anglais est préconisée pour la documentation du code.
 }
 
 % Mots-clés
-\ajoutRmotscles{Algorithmes, Langages de programmation, Méthodologie de développement, Suivi de versions}
+\ajoutRmotscles{Algorithmes, Langages de programmation, Méthodologie de développement, Suivi de versions.}
