--- a/latex/ressources/R108.tex
+++ b/latex/ressources/R108.tex
@@ -82,4 +82,4 @@ précédemment.}
 }
 
 % Mots-clés
-\ajoutRmotscles{Programmation, Arborescence, Processus, Scripts, Variables d'environnement, PIX}
+\ajoutRmotscles{Programmation, Arborescence, Processus, Scripts, Variables d'environnement, PIX.}
