--- a/latex/ressources/R109.tex
+++ b/latex/ressources/R109.tex
@@ -66,4 +66,4 @@ navigateur Web.}
 }
 
 % Mots-clés
-\ajoutRmotscles{Web, \texttt{HTML}, \texttt{CSS}, Client/serveur, Codage de l'information}
+\ajoutRmotscles{Web, \texttt{HTML}, \texttt{CSS}, Client/serveur, Codage de l'information.}
