--- a/latex/ressources/R110.tex
+++ b/latex/ressources/R110.tex
@@ -70,4 +70,4 @@ Partant d'un niveau pré-requis A2-B1,
 }
 
 % Mots-clés
-\ajoutRmotscles{Anglais général et technique, Situations de communication, Expression, Compréhension}
+\ajoutRmotscles{Anglais général et technique, Situations de communication, Expression, Compréhension.}
