--- a/latex/ressources/R111.tex
+++ b/latex/ressources/R111.tex
@@ -86,4 +86,4 @@ l'importance des savoir-être et aux enjeux du développement durable.}
 }
 
 % Mots-clés
-\ajoutRmotscles{Recherche documentaire, Expression écrite, Rédaction technique, Expression orale, Médias, Culture générale, Esprit critique, Développement durable}
+\ajoutRmotscles{Recherche documentaire, Expression écrite, Rédaction technique, Expression orale, Médias, Culture générale, Esprit critique, Développement durable.}
