--- a/latex/ressources/R112.tex
+++ b/latex/ressources/R112.tex
@@ -82,4 +82,4 @@ Les activités pouvant être proposées dans cette ressource sont :
 }
 
 % Mots-clés
-\ajoutRmotscles{Métiers, Entreprises, Orientation, Parcours, Portfolio}
+\ajoutRmotscles{Métiers, Entreprises, Orientation, Parcours, Portfolio.}
