--- a/latex/ressources/R113.tex
+++ b/latex/ressources/R113.tex
@@ -103,4 +103,4 @@ par l'intermédiaire du calcul d'images et d'antécédents.
 }
 
 % Mots-clés
-\ajoutRmotscles{Signaux, Signaux périodiques}
+\ajoutRmotscles{Signaux, Signaux périodiques.}
