--- a/latex/ressources/R114.tex
+++ b/latex/ressources/R114.tex
@@ -95,4 +95,4 @@ lien avec l'électronique et les télécommunications.}
 }
 
 % Mots-clés
-\ajoutRmotscles{Trigonométrie, Logarithme, Exponentielle, Complexes}
+\ajoutRmotscles{Trigonométrie, Logarithme, Exponentielle, Complexes.}
