--- a/latex/ressources/R115.tex
+++ b/latex/ressources/R115.tex
@@ -83,4 +83,4 @@ Dans le cadre de cette ressource transversale, l'étudiant devra :
 }
 
 % Mots-clés
-\ajoutRmotscles{Planification, Partage d'informations, Organisation, Conceptualisation, Réunion}
+\ajoutRmotscles{Planification, Partage d'informations, Organisation, Conceptualisation, Réunion.}
