--- a/latex/ressources/R201.tex
+++ b/latex/ressources/R201.tex
@@ -69,4 +69,4 @@ pourront servir de support)}
 }
 
 % Mots-clés
-\ajoutRmotscles{Plan d'adressage, Routage état de lien, Stratégies de filtrage, \texttt{CIDR}, \texttt{VLSM}, Agrégation de routes, \texttt{IP}v6, \texttt{NDP}}
+\ajoutRmotscles{Plan d'adressage, Routage état de lien, Stratégies de filtrage, \texttt{CIDR}, \texttt{VLSM}, Agrégation de routes, \texttt{IP}v6, \texttt{NDP}.}
