--- a/latex/ressources/R202.tex
+++ b/latex/ressources/R202.tex
@@ -68,4 +68,4 @@ client et de son environnement logiciel.}
 }
 
 % Mots-clés
-\ajoutRmotscles{Systèmes d'exploitation, Linux, Windows, Scripts, Virtualisation, Conteneurisation, Cybersécurité}
+\ajoutRmotscles{Systèmes d'exploitation, Linux, Windows, Scripts, Virtualisation, Conteneurisation, Cybersécurité.}
