--- a/latex/ressources/R204.tex
+++ b/latex/ressources/R204.tex
@@ -72,4 +72,4 @@ informatique.
 }
 
 % Mots-clés
-\ajoutRmotscles{\texttt{IPBX}, \texttt{PABX}, \texttt{TDM}/\texttt{IP}, Postes et services téléphoniques, Visiophonie, Plan de numérotation, Réseaux téléphoniques publics}
+\ajoutRmotscles{\texttt{IPBX}, \texttt{PABX}, \texttt{TDM}/\texttt{IP}, Postes et services téléphoniques, Visiophonie, Plan de numérotation, Réseaux téléphoniques publics.}
