--- a/latex/ressources/R205.tex
+++ b/latex/ressources/R205.tex
@@ -66,4 +66,4 @@ modifications ces signaux vont subir dans un système télécom.}
 }
 
 % Mots-clés
-\ajoutRmotscles{Représentations temporelles et fréquentielles des signaux, Fonction de transfert, Bande passante, Analyse spectrale}
+\ajoutRmotscles{Représentations temporelles et fréquentielles des signaux, Fonction de transfert, Bande passante, Analyse spectrale.}
