--- a/latex/ressources/R207.tex
+++ b/latex/ressources/R207.tex
@@ -90,4 +90,4 @@ L'utilisation de l'anglais est préconisée dans la documentation du code.
 }
 
 % Mots-clés
-\ajoutRmotscles{Base de données, Langages informatiques, Programmation, Algorithmes}
+\ajoutRmotscles{Base de données, Langages informatiques, Programmation, Algorithmes.}
