--- a/latex/ressources/R208.tex
+++ b/latex/ressources/R208.tex
@@ -86,4 +86,4 @@ L'utilisation de l'anglais est préconisée dans la documentation du code.
 }
 
 % Mots-clés
-\ajoutRmotscles{Algorithmes, langages de programmation, structure de données, méthodologie de développement, gestion de versions}
+\ajoutRmotscles{Algorithmes, langages de programmation, structure de données, méthodologie de développement, gestion de versions.}
