--- a/latex/ressources/R209.tex
+++ b/latex/ressources/R209.tex
@@ -83,4 +83,4 @@ L'utilisation de l'anglais est préconisée dans la documentation du code.
 }
 
 % Mots-clés
-\ajoutRmotscles{Web, Développement, Algorithmes, \texttt{SGBD}, \texttt{API}, Sécurité, Environnement client-serveur}
+\ajoutRmotscles{Web, Développement, Algorithmes, \texttt{SGBD}, \texttt{API}, Sécurité, Environnement client-serveur.}
