--- a/latex/ressources/R211.tex
+++ b/latex/ressources/R211.tex
@@ -96,4 +96,4 @@ presse}
 }
 
 % Mots-clés
-\ajoutRmotscles{Synthèse, Résumé, Expression écrite, Rédaction technique, Expression orale, Médias, Culture générale, Esprit critique, Développement durable}
+\ajoutRmotscles{Synthèse, Résumé, Expression écrite, Rédaction technique, Expression orale, Médias, Culture générale, Esprit critique, Développement durable.}
