--- a/latex/ressources/R212.tex
+++ b/latex/ressources/R212.tex
@@ -81,4 +81,4 @@ Les activités notamment proposées dans cette ressource sont :
 }
 
 % Mots-clés
-\ajoutRmotscles{\texttt{CV}, Lettre de motivation, Entretien de recrutement, Stage, Alternance}
+\ajoutRmotscles{\texttt{CV}, Lettre de motivation, Entretien de recrutement, Stage, Alternance.}
