--- a/latex/ressources/R213.tex
+++ b/latex/ressources/R213.tex
@@ -82,4 +82,4 @@ l'exploitation d'algorithmes mis en œuvre via un outil informatique.}
 }
 
 % Mots-clés
-\ajoutRmotscles{Suites, Ensembles, Vecteurs, Matrices}
+\ajoutRmotscles{Suites, Ensembles, Vecteurs, Matrices.}
