--- a/latex/ressources/R214.tex
+++ b/latex/ressources/R214.tex
@@ -89,4 +89,4 @@ télécommunications.}
 }
 
 % Mots-clés
-\ajoutRmotscles{Dérivées, Intégrales, Limites}
+\ajoutRmotscles{Dérivées, Intégrales, Limites.}
