--- a/latex/saes/SAE11.tex
+++ b/latex/saes/SAE11.tex
@@ -52,4 +52,4 @@ destination des proches ou de la famille de l'étudiant.
 }
 
 % Mots-clés
-\ajoutSmotscles{Sécurité numérique, Utilisation d'Internet, Menaces communes, Remédiations}
+\ajoutSmotscles{Sécurité numérique, Utilisation d'Internet, Menaces communes, Remédiations.}
