--- a/latex/saes/SAE12.tex
+++ b/latex/saes/SAE12.tex
@@ -63,4 +63,4 @@ stable.}
 }
 
 % Mots-clés
-\ajoutSmotscles{Réseau local, Connexion internet, Équipements actifs}
+\ajoutSmotscles{Réseau local, Connexion internet, Équipements actifs.}
