--- a/latex/saes/SAE13.tex
+++ b/latex/saes/SAE13.tex
@@ -61,4 +61,4 @@ L'évaluation s'appuiera sur tout ou partie des éléments suivants :
 }
 
 % Mots-clés
-\ajoutSmotscles{Mesures, Supports de transmission (fibre optique, cuivre, radio)}
+\ajoutSmotscles{Mesures, Supports de transmission (fibre optique, cuivre, radio).}
