--- a/latex/saes/SAE14.tex
+++ b/latex/saes/SAE14.tex
@@ -63,4 +63,4 @@ en mesurant l'importance et la portée des contenus qu'il diffuse
 }
 
 % Mots-clés
-\ajoutSmotscles{Identité numérique, site Web}
+\ajoutSmotscles{Identité numérique, site Web.}
