--- a/latex/saes/SAE15.tex
+++ b/latex/saes/SAE15.tex
@@ -70,4 +70,4 @@ pour gérer de façon efficace le traitement de ces données.}
 }
 
 % Mots-clés
-\ajoutSmotscles{Algorithmique, Programmation, Script}
+\ajoutSmotscles{Algorithmique, Programmation, Script.}
