--- a/latex/saes/SAE21.tex
+++ b/latex/saes/SAE21.tex
@@ -67,4 +67,4 @@ fournir à la structure un réseau fonctionnel et structuré.}
 }
 
 % Mots-clés
-\ajoutSmotscles{Adressage \texttt{IP}, \texttt{VLAN}, \texttt{VTP}, routage inter-\texttt{VLAN}, \texttt{NAT}, \texttt{PAT}, \texttt{ACL}, \texttt{DNS}, \texttt{HTTP}, \texttt{SSH}, routage (vecteur de distance / état de lien), \texttt{PXE}, \texttt{TFTP}}
+\ajoutSmotscles{Adressage \texttt{IP}, \texttt{VLAN}, \texttt{VTP}, routage inter-\texttt{VLAN}, \texttt{NAT}, \texttt{PAT}, \texttt{ACL}, \texttt{DNS}, \texttt{HTTP}, \texttt{SSH}, routage (vecteur de distance / état de lien), \texttt{PXE}, \texttt{TFTP}.}
