--- a/latex/saes/SAE22.tex
+++ b/latex/saes/SAE22.tex
@@ -55,4 +55,4 @@ présenter sous forme d'un bilan à un client ou un collaborateur.}
 }
 
 % Mots-clés
-\ajoutSmotscles{Spectre, Puissance, Décibels, Sensibilité, Atténuation, Gain}
+\ajoutSmotscles{Spectre, Puissance, Décibels, Sensibilité, Atténuation, Gain.}
