--- a/latex/saes/SAE23.tex
+++ b/latex/saes/SAE23.tex
@@ -80,4 +80,4 @@ informatique pour le compte de son entreprise.}
 }
 
 % Mots-clés
-\ajoutSmotscles{Algorithmique, programmation, développement web, documentation technique}
+\ajoutSmotscles{Algorithmique, programmation, développement web, documentation technique.}
