--- a/latex/ressources/R203.tex
+++ b/latex/ressources/R203.tex
@@ -75,4 +75,4 @@ pourront servir de support).}
 }
 
 % Mots-clés
-\ajoutRmotscles{Protocoles et ports applicatifs, Services, Systèmes d'exploitation}
+\ajoutRmotscles{Protocoles et ports applicatifs, Services, Systèmes d'exploitation.}
