--- a/latex/ressources/R210.tex
+++ b/latex/ressources/R210.tex
@@ -68,4 +68,4 @@ contexte professionnel technique.}
 }
 
 % Mots-clés
-\ajoutRmotscles{Anglais général et technique, Situations de communication professionnelle, Expression et compréhension}
+\ajoutRmotscles{Anglais général et technique, Situations de communication professionnelle, Expression et compréhension.}
