Corrige coeff => coeff

--- a/latex/modeles/tableau_ressource.tex
+++ b/latex/modeles/tableau_ressource.tex
@@ -52,9 +52,9 @@
 	\hyperlink{comp:RT3}{\textcolor{compCC}{\textit{\csname Rcomp\CODE C\endcsname}}} | {\csname Rniveau\CODE C\endcsname}
 \\
 \hline
-	\ifcsdef{Rcoeff\CODE A}{coeff. {\csname Rcoeff\CODE A\endcsname}}{} &
-	\ifcsdef{Rcoeff\CODE B}{coeff. {\csname Rcoeff\CODE B\endcsname}}{} &
-	\ifcsdef{Rcoeff\CODE C}{coeff. {\csname Rcoeff\CODE C\endcsname}}{}
+	\ifcsdef{Rcoeff\CODE A}{coef. {\csname Rcoeff\CODE A\endcsname}}{} &
+	\ifcsdef{Rcoeff\CODE B}{coef. {\csname Rcoeff\CODE B\endcsname}}{} &
+	\ifcsdef{Rcoeff\CODE C}{coef. {\csname Rcoeff\CODE C\endcsname}}{}
 \\
 \hline % AC de RT1
 {\listeAC{R}{\CODE}{A}{RT1}
