--- a/latex/modeles/tableau_sae.tex
+++ b/latex/modeles/tableau_sae.tex
@@ -79,9 +79,9 @@
 	\hyperlink{comp:RT3}{\textcolor{compCC}{\textit{\csname Scomp\CODE C\endcsname}}} | {\csname Sniveau\CODE C\endcsname}
 \\
 \hline
-	\ifcsdef{Scoeff\CODE A}{coeff. {\csname Scoeff\CODE A\endcsname}}{} &
-	\ifcsdef{Scoeff\CODE B}{coeff. {\csname Scoeff\CODE B\endcsname}}{} &
-	\ifcsdef{Scoeff\CODE C}{coeff. {\csname Scoeff\CODE C\endcsname}}{}
+	\ifcsdef{Scoeff\CODE A}{coef. {\csname Scoeff\CODE A\endcsname}}{} &
+	\ifcsdef{Scoeff\CODE B}{coef. {\csname Scoeff\CODE B\endcsname}}{} &
+	\ifcsdef{Scoeff\CODE C}{coef. {\csname Scoeff\CODE C\endcsname}}{}
 \\
 \hline % AC de RT1
 {\listeAC{S}{\CODE}{A}{RT1}
