Suppression des doubles || dans les colonnes des tableaux

--- a/latex/pn_formation.tex
+++ b/latex/pn_formation.tex
@@ -142,19 +142,19 @@
 
 \scalebox{0.95}{\input{synthese/S1_acs_vs_saes_ressources.tex}}
 
-\subsection{Volumes horaires et coefficients}
+\subsection{Volumes horaires et coefficients du semestre 1}
 
 \input{synthese/S1_coeffs_saes_ressources.tex}
 
 \newpage
 
 % Les SAE du semestre 1 + les exemples
-\subsection{Fiches SAÉs}
+\subsection{Fiches SAÉs du semestre 1}
 \affichageSAE{\sem}
 \newpage
 
 % Les ressources du semestre 1
-\subsection{Fiches ressources}
+\subsection{Fiches ressources du semestre 1}
 \affichageRessource{\sem}
 
 %%%%%%%%%%%%%%%%
@@ -176,18 +176,18 @@
 
 \scalebox{0.95}{\input{synthese/S2_acs_vs_saes_ressources.tex}}
 
-\subsection{Volumes horaires et coefficients}
+\subsection{Volumes horaires et coefficients du semestre 2}
 
 \input{synthese/S2_coeffs_saes_ressources.tex}
 
 \newpage
 
 % Les SAE du semestre 2 + les exemples
-\subsection{Fiches SAÉs}
+\subsection{Fiches SAÉs du semestre 2}
 \affichageSAE{\sem}
 
 % Les ressources du semestre 2
-\subsection{Fiches ressources}
+\subsection{Fiches ressources du semestre 2}
 \affichageRessource{\sem}
 
 \section{Abbréviations}
