--- a/latex/synthese/S1_acs_vs_saes_ressources.tex
+++ b/latex/synthese/S1_acs_vs_saes_ressources.tex
@@ -1,6 +1,6 @@
-\begin{tabular}[c]{|lp{4cm}||c|c|c|c|c|c||c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\begin{tabular}[c]{|lp{4cm}|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
 \hline 
- & & \multicolumn{6}{c||}{\textcolor{saeC}{\bfseries SAÉs}}
+ & & \multicolumn{6}{c|}{\textcolor{saeC}{\bfseries SAÉs}}
  & \multicolumn{15}{c|}{\textcolor{ressourceC}{\bfseries Ressources}}\\ 
 \cline{3-23} & & \rotatebox[origin=l]{90}{\tiny{Se sensibiliser à l'hygiène informatique et à la cybersécurité~}}
  & \rotatebox[origin=l]{90}{\tiny{S'initier aux réseaux informatiques~}}
