--- a/latex/synthese/S1_coeffs_saes_ressources.tex
+++ b/latex/synthese/S1_coeffs_saes_ressources.tex
@@ -1,6 +1,6 @@
-\begin{tabular}[c]{|rcp{6cm}||c|c||c||c|c|c|}
+\begin{tabular}[c]{|rcp{6cm}|c|c|c|c|c|c|}
 \hline 
- & & & \multicolumn{3}{c||}{\bfseries Volumes} 
+ & & & \multicolumn{3}{c|}{\bfseries Volumes} 
  & \multicolumn{3}{c|}{\bfseries Coefficients} 
  \\ \hline 
  & & & \rotatebox[origin=l]{90}{\bfseries Heures de formation encadrée} & \rotatebox[origin=l]{90}{\bfseries Heures de TPs} & \rotatebox[origin=l]{90}{\bfseries Heures de projets} & \rotatebox[origin=l]{90}{\begin{tabular}{p{5cm}}
@@ -89,4 +89,4 @@
 8h & 4h &  &  & 2 & 4\\ 
 \hline \hline \multicolumn{6}{|l}{\bfseries Total}
 \\ 
-\hline \multicolumn{3}{|r|}{\textit{SAÉs}}  & \textit{11h} & \textit{36h} & \textit{80h} & \textit{48h} & \textit{33h} & \textit{42h}\\ \hline \multicolumn{3}{|r|}{\textit{Ressources}}  & \textit{177h} & \textit{216h} & \textit{0h} & \textit{76} & \textit{48} & \textit{53}\\ \hline \multicolumn{3}{|r|}{\bfseries SAÉs + Ressources} & {\bfseries 188h} & {\bfseries 252h} & {\bfseries 80h} & {\bfseries 124} & {\bfseries 81} & {\bfseries 95}\\ \hline\end{tabular}
+\hline \multicolumn{3}{|r|}{\textit{SAÉs}}  & \textit{11h} & \textit{36h} & \textit{80h} & \textit{48} & \textit{33} & \textit{42}\\ \hline \multicolumn{3}{|r|}{\textit{Ressources}}  & \textit{177h} & \textit{216h} & \textit{0h} & \textit{76} & \textit{48} & \textit{53}\\ \hline \multicolumn{3}{|r|}{\bfseries SAÉs + Ressources} & {\bfseries 188h} & {\bfseries 252h} & {\bfseries 80h} & {\bfseries 124} & {\bfseries 81} & {\bfseries 95}\\ \hline\end{tabular}
