--- a/latex/synthese/S2_acs_vs_saes_ressources.tex
+++ b/latex/synthese/S2_acs_vs_saes_ressources.tex
@@ -1,6 +1,6 @@
-\begin{tabular}[c]{|lp{4cm}||c|c|c|c||c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\begin{tabular}[c]{|lp{4cm}|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
 \hline 
- & & \multicolumn{4}{c||}{\textcolor{saeC}{\bfseries SAÉs}}
+ & & \multicolumn{4}{c|}{\textcolor{saeC}{\bfseries SAÉs}}
  & \multicolumn{14}{c|}{\textcolor{ressourceC}{\bfseries Ressources}}\\ 
 \cline{3-20} & & \rotatebox[origin=l]{90}{\tiny{Construire un réseau informatique pour une petite structure~}}
  & \rotatebox[origin=l]{90}{\tiny{Mesurer et caractériser un signal ou un système~}}
