--- a/latex/synthese/S2_coeffs_saes_ressources.tex
+++ b/latex/synthese/S2_coeffs_saes_ressources.tex
@@ -1,6 +1,6 @@
-\begin{tabular}[c]{|rcp{6cm}||c|c||c||c|c|c|}
+\begin{tabular}[c]{|rcp{6cm}|c|c|c|c|c|c|}
 \hline 
- & & & \multicolumn{3}{c||}{\bfseries Volumes} 
+ & & & \multicolumn{3}{c|}{\bfseries Volumes} 
  & \multicolumn{3}{c|}{\bfseries Coefficients} 
  \\ \hline 
  & & & \rotatebox[origin=l]{90}{\bfseries Heures de formation encadrée} & \rotatebox[origin=l]{90}{\bfseries Heures de TPs} & \rotatebox[origin=l]{90}{\bfseries Heures de projets} & \rotatebox[origin=l]{90}{\begin{tabular}{p{5cm}}
@@ -80,4 +80,4 @@
 24h & 6h &  & 3 & 9 & \\ 
 \hline \hline \multicolumn{6}{|l}{\bfseries Total}
 \\ 
-\hline \multicolumn{3}{|r|}{\textit{SAÉs}}  & \textit{13h} & \textit{32h} & \textit{90h} & \textit{46h} & \textit{38h} & \textit{36h}\\ \hline \multicolumn{3}{|r|}{\textit{Ressources}}  & \textit{198h} & \textit{222h} & \textit{0h} & \textit{68} & \textit{61} & \textit{51}\\ \hline \multicolumn{3}{|r|}{\bfseries SAÉs + Ressources} & {\bfseries 211h} & {\bfseries 254h} & {\bfseries 90h} & {\bfseries 114} & {\bfseries 99} & {\bfseries 87}\\ \hline\end{tabular}
+\hline \multicolumn{3}{|r|}{\textit{SAÉs}}  & \textit{13h} & \textit{32h} & \textit{90h} & \textit{46} & \textit{38} & \textit{36}\\ \hline \multicolumn{3}{|r|}{\textit{Ressources}}  & \textit{198h} & \textit{222h} & \textit{0h} & \textit{68} & \textit{61} & \textit{51}\\ \hline \multicolumn{3}{|r|}{\bfseries SAÉs + Ressources} & {\bfseries 211h} & {\bfseries 254h} & {\bfseries 90h} & {\bfseries 114} & {\bfseries 99} & {\bfseries 87}\\ \hline\end{tabular}
