--- a/latex/modeles/tableau_competence.tex
+++ b/latex/modeles/tableau_competence.tex
@@ -77,7 +77,7 @@
 			{\bfseries \csname niveaudesc\CNOM\Alph{noligne}\endcsname} \\
 				\forLoop{1}{6}{noac}{
            			\ifcsdef{apprdesc\CNOM\Alph{noligne}\Alph{noac}}{
-							{\textcolor{\colorcomp}{\csname apprcoderef\CNOM\Alph{noligne}\Alph{noac}\endcsname}}~| \csname apprdesc\CNOM\Alph{noligne}\Alph{noac}\endcsname \tabularnewline
+							{\textcolor{\colorcomp}{\csname apprcoderef\CNOM\Alph{noligne}\Alph{noac}\endcsname}} \csname apprdesc\CNOM\Alph{noligne}\Alph{noac}\endcsname \tabularnewline
 					}{}
 				}			
 			\end{tabular}
