--- a/latex/synthese/S2_coeffs_saes_ressources.tex
+++ b/latex/synthese/S2_coeffs_saes_ressources.tex
@@ -1,9 +1,9 @@
-\begin{tabular}[c]{|rcp{6cm}|c|c|c|c|c|c|}
+\begin{tabular}[c]{|rp{6cm}|c|c|c|c|c|c|}
 \hline 
- & & & \multicolumn{3}{c|}{\bfseries Volumes} 
+ & & \multicolumn{3}{c|}{\bfseries Volumes} 
  & \multicolumn{3}{c|}{\bfseries Coefficients} 
  \\ \hline 
- & & & \rotatebox[origin=l]{90}{\bfseries Heures de formation encadrée} & \rotatebox[origin=l]{90}{\bfseries Heures de TPs} & \rotatebox[origin=l]{90}{\bfseries Heures de projets} & \rotatebox[origin=l]{90}{\begin{tabular}{p{5cm}}
+ & & \rotatebox[origin=l]{90}{\bfseries Heures de formation encadrée} & \rotatebox[origin=l]{90}{\bfseries Heures de TPs} & \rotatebox[origin=l]{90}{\bfseries Heures de projets} & \rotatebox[origin=l]{90}{\begin{tabular}{p{5cm}}
 \textcolor{compCA}{\bfseries RT1} - Administrer les réseaux et l'Internet\\ 
  \small Niveau 1 - Assister l'administrateur du réseau
 \end{tabular}
@@ -20,64 +20,64 @@
 }
 
 \\ 
-\hline\hline\multicolumn{6}{|l}{\textcolor{saeC}{\bfseries SAÉs}}
+\hline\hline\multicolumn{5}{|l}{\textcolor{saeC}{\bfseries SAÉs}}
 \\ 
-\hline \textcolor{saeC}{SAÉ21} & | & 
+\hline \textcolor{saeC}{SAÉ21} & 
 \begin{tabular}{p{5.7cm}} \tiny{Construire un réseau informatique pour une petite structure} \end{tabular} & 
 2h & 8h & 12h & 23 &  & \\ 
-\hline \textcolor{saeC}{SAÉ22} & | & 
+\hline \textcolor{saeC}{SAÉ22} & 
 \begin{tabular}{p{5.7cm}} \tiny{Mesurer et caractériser un signal ou un système} \end{tabular} & 
   & 10h & 12h &  & 19 & \\ 
-\hline \textcolor{saeC}{SAÉ23} & | & 
+\hline \textcolor{saeC}{SAÉ23} & 
 \begin{tabular}{p{5.7cm}} \tiny{Mettre en place une solution informatique pour l’entreprise} \end{tabular} & 
 3h & 14h & 12h &  &  & 18\\ 
-\hline \textcolor{saeC}{SAÉ24} & | & 
+\hline \textcolor{saeC}{SAÉ24} & 
 \begin{tabular}{p{5.7cm}} \tiny{Projet intégratif} \end{tabular} & 
 8h &   & 54h & 23 & 19 & 18\\ 
-\hline \multicolumn{6}{|l}{\textcolor{ressourceC}{\bfseries Ressources}}
+\hline \multicolumn{5}{|l}{\textcolor{ressourceC}{\bfseries Ressources}}
 \\ 
-\hline \textcolor{ressourceC}{R201} & | & 
+\hline \textcolor{ressourceC}{R201} & 
 \begin{tabular}{p{5.7cm}}\tiny{Technologie de l'Internet} \end{tabular} & 
 30h & 30h &  & 19 & 4 & 0\\ 
-\hline \textcolor{ressourceC}{R202} & | & 
+\hline \textcolor{ressourceC}{R202} & 
 \begin{tabular}{p{5.7cm}}\tiny{Administration système et fondamentaux de la virtualisation} \end{tabular} & 
 10h & 20h &  & 12 &  & 3\\ 
-\hline \textcolor{ressourceC}{R203} & | & 
+\hline \textcolor{ressourceC}{R203} & 
 \begin{tabular}{p{5.7cm}}\tiny{Bases des services réseaux} \end{tabular} & 
 12h & 18h &  & 12 &  & \\ 
-\hline \textcolor{ressourceC}{R204} & | & 
+\hline \textcolor{ressourceC}{R204} & 
 \begin{tabular}{p{5.7cm}}\tiny{Initiation à la téléphonie d'entreprise} \end{tabular} & 
 15h & 15h &  & 8 & 4 & 0\\ 
-\hline \textcolor{ressourceC}{R205} & | & 
+\hline \textcolor{ressourceC}{R205} & 
 \begin{tabular}{p{5.7cm}}\tiny{Signaux et Systèmes pour les transmissions} \end{tabular} & 
 21h & 15h &  & 2 & 12 & \\ 
-\hline \textcolor{ressourceC}{R206} & | & 
+\hline \textcolor{ressourceC}{R206} & 
 \begin{tabular}{p{5.7cm}}\tiny{Numérisation de l'information} \end{tabular} & 
 12h & 12h &  &  & 10 & \\ 
-\hline \textcolor{ressourceC}{R207} & | & 
+\hline \textcolor{ressourceC}{R207} & 
 \begin{tabular}{p{5.7cm}}\tiny{Sources de données} \end{tabular} & 
 8h & 12h &  & 0 &  & 10\\ 
-\hline \textcolor{ressourceC}{R208} & | & 
+\hline \textcolor{ressourceC}{R208} & 
 \begin{tabular}{p{5.7cm}}\tiny{Analyse et traitement de données structurées} \end{tabular} & 
 6h & 10h &  &  &  & 10\\ 
-\hline \textcolor{ressourceC}{R209} & | & 
+\hline \textcolor{ressourceC}{R209} & 
 \begin{tabular}{p{5.7cm}}\tiny{Initiation au développement Web} \end{tabular} & 
 9h & 15h &  & 2 &  & 10\\ 
-\hline \textcolor{ressourceC}{R210} & | & 
+\hline \textcolor{ressourceC}{R210} & 
 \begin{tabular}{p{5.7cm}}\tiny{Anglais de communication et développement de l'anglais technique} \end{tabular} & 
 15h & 30h &  & 3 & 9 & 7\\ 
-\hline \textcolor{ressourceC}{R211} & | & 
+\hline \textcolor{ressourceC}{R211} & 
 \begin{tabular}{p{5.7cm}}\tiny{Expression-Culture-Communication Professionnelles 2} \end{tabular} & 
 9h & 21h &  & 3 & 5 & 4\\ 
-\hline \textcolor{ressourceC}{R212} & | & 
+\hline \textcolor{ressourceC}{R212} & 
 \begin{tabular}{p{5.7cm}}\tiny{Projet Personnel et Professionnel} \end{tabular} & 
 3h & 12h &  & 1 & 3 & 2\\ 
-\hline \textcolor{ressourceC}{R213} & | & 
+\hline \textcolor{ressourceC}{R213} & 
 \begin{tabular}{p{5.7cm}}\tiny{Mathématiques des systèmes numériques} \end{tabular} & 
 24h & 6h &  & 3 & 5 & 5\\ 
-\hline \textcolor{ressourceC}{R214} & | & 
+\hline \textcolor{ressourceC}{R214} & 
 \begin{tabular}{p{5.7cm}}\tiny{Analyse mathématique des signaux} \end{tabular} & 
 24h & 6h &  & 3 & 9 & \\ 
-\hline \hline \multicolumn{6}{|l}{\bfseries Total}
+\hline \hline \multicolumn{5}{|l}{\bfseries Total}
 \\ 
-\hline \multicolumn{3}{|r|}{\textit{SAÉs}}  & \textit{13h} & \textit{32h} & \textit{90h} & \textit{46} & \textit{38} & \textit{36}\\ \hline \multicolumn{3}{|r|}{\textit{Ressources}}  & \textit{198h} & \textit{222h} & \textit{0h} & \textit{68} & \textit{61} & \textit{51}\\ \hline \multicolumn{3}{|r|}{\bfseries SAÉs + Ressources} & {\bfseries 211h} & {\bfseries 254h} & {\bfseries 90h} & {\bfseries 114} & {\bfseries 99} & {\bfseries 87}\\ \hline\end{tabular}
+\hline \multicolumn{2}{|r|}{\textit{SAÉs}}  & \textit{13h} & \textit{32h} & \textit{90h} & \textit{46} & \textit{38} & \textit{36}\\ \hline \multicolumn{2}{|r|}{\textit{Ressources}}  & \textit{198h} & \textit{222h} & \textit{0h} & \textit{68} & \textit{61} & \textit{51}\\ \hline \multicolumn{2}{|r|}{\bfseries SAÉs + Ressources} & {\bfseries 211h} & {\bfseries 254h} & {\bfseries 90h} & {\bfseries 114} & {\bfseries 99} & {\bfseries 87}\\ \hline\end{tabular}
