Amélioration des abbréviations sur 2 colonnes

--- a/latex/pn_formation.tex
+++ b/latex/pn_formation.tex
@@ -28,6 +28,7 @@
 \usepackage{array}
 \usepackage{fontawesome}
 \usepackage{amssymb}
+\usepackage{multicol}
 
 \setlist{leftmargin=1em,topsep=0pt,partopsep=0pt,itemsep=0pt,itemindent=0em}
 
@@ -192,6 +193,8 @@
 
 \section{Abbréviations}
 
+\begin{multicols}{2}
 \input{synthese/abbreviations.tex}
+\end{multicols}
 
 \end{document}
