--- a/latex/synthese/abbreviations.tex
+++ b/latex/synthese/abbreviations.tex
@@ -1,190 +1,372 @@
-\begin{tabular}{rp{6.5cm}p{0.5cm}rp{6.5cm}} 
-\texttt{ACL} & Access Control List
- & & 
-\texttt{MOOC} & Massive Open Online Course
-\\ 
-\texttt{ADSL} & Asymmetric Digital Subscriber Line
- & & 
-\texttt{NAS} & Network Attached Storage
-\\ 
-\texttt{ALU} & Arithmetic and Logic Unit
- & & 
-\texttt{NAT} & Network Address Translation
-\\ 
-\texttt{ANSSI} & Agence nationale de la sécurité des systèmes d'information
- & & 
-\texttt{NDP} & Neighbor Discovery Protocol
-\\ 
-\texttt{API} & Application Programming Interface
- & & 
-\texttt{NTP} & Network Time Protocol
-\\ 
-\texttt{APC} & Approche Par Compétence
- & & 
-\texttt{OS} & Operating System
-\\ 
-\texttt{ARP} & Address Resolution Protocol
- & & 
-\texttt{OSPF} & Open Shortest Path First
-\\ 
-\texttt{BDD} & Base De Données
- & & 
-\texttt{PABX} & Private Automatic Branch Exchange
-\\ 
-\texttt{CAN} & Convertisseur Analogique-Numérique
- & & 
-\texttt{PAT} & Port Address Translation
-\\ 
-\texttt{CC} & Copie Carbone
- & & 
-\texttt{PC} & Personnal Computer
-\\ 
-\texttt{CCi} & Copie Carbone invisible
- & & 
-\texttt{PERT} & Program Evaluation and Review Technology
-\\ 
-\texttt{CEM} & Compatibilité ÉlectroMagnétique
- & & 
-\texttt{PME} & Petite et Moyenne Entreprise
-\\ 
-\texttt{CNA} & Convertisseur Numérique-Analogique
- & & 
-\texttt{PoE} & Power over Ethernet
-\\ 
-\texttt{CNIL} & Commission Nationale de l'Informatique et des Libertés
- & & 
-\texttt{POP} & Post Office Protocol
-\\ 
-\texttt{CIDR} & Classless Inter-Domain Routing
- & & 
-\texttt{PPP} & Projet Professionnel et Personnel
-\\ 
-\texttt{CSS} & Cascading Style Sheets
- & & 
-\texttt{PXE} & Pre-boot eXecution Environment
-\\ 
-\texttt{CSV} & Comma-Separated Values
- & & 
-\texttt{QCM} & Questionnaire à Choix Multiples
-\\ 
-\texttt{CV} & Curriculum Vitae
- & & 
-\texttt{RGPD} & Règlement Général pour la Protection des Données
-\\ 
-\texttt{DDoS} & Distributed Denial of Service
- & & 
-\texttt{RSTP} & Rapid Spanning Tree Protocol
-\\ 
-\texttt{DHCP} & Dynamic Host Configuration Protocol
- & & 
-\texttt{RTP} & Real-Time Transport Protocol
-\\ 
-\texttt{DMZ} & DeMilitarized Zone
- & & 
-\texttt{SGBD} & Système de Gestion de Bases de Données
-\\ 
-\texttt{DNS} & Domain Name System
- & & 
-\texttt{SMTP} & Simple Mail Transfer Protocol
-\\ 
-\texttt{DOM} & Document Object Model
- & & 
-\texttt{SQL} & Structured Query Language
-\\ 
-\texttt{DSI} & Direction des Systèmes d'Information
- & & 
-\texttt{SSH} & Secure SHell
-\\ 
-\texttt{DSP} & Densité Spectrale de Puissance
- & & 
-\texttt{STP} & Spanning Tree Protocol
-\\ 
-\texttt{DAB} & Digital Audio Broadcasting
- & & 
-\texttt{TELNET} & TELecommunication NETwork
-\\ 
-\texttt{DVB-S} & Digital Video Broadcasting Satellite
- & & 
-\texttt{TCP} & Transmission Control Protocol
-\\ 
-\texttt{DVB-T} & Digital Video Broadcasting Terrestre
- & & 
-\texttt{TDM} & Time Division Multiplexing
-\\ 
-\texttt{EMILE} & Enseignement d'une Matière par l'Intégration d'une Langue Etrangère
- & & 
-\texttt{TFTP} & Trivial File Transfer Protocol
-\\ 
-\texttt{FFT} & Fast Fourier Transform
- & & 
-\texttt{ToIP} & Telephony over Internet Protocol
-\\ 
-\texttt{FM} & Frequency Modulation
- & & 
-\texttt{TV} & TéléVision
-\\ 
-\texttt{FO} & Fibre Optique
- & & 
-\texttt{UDP} & User Datagram Protocol
-\\ 
-\texttt{FOVI} & Faux Ordres de Virements Internationaux
- & & 
-\texttt{UML} & Unified Modeling Language
-\\ 
-\texttt{FTP} & File Transfer Protocol
- & & 
-\texttt{URL} & Uniform Resource Locator
-\\ 
-\texttt{GBF} & Générateur de Basses Fréquences
- & & 
-\texttt{USB} & Universal Serial Bus
-\\ 
-\texttt{GPIO} & General Purpose Input/Output
- & & 
-\texttt{VLAN} & Virtual Local Area Network
-\\ 
-\texttt{HiFi} & High Fidelity
- & & 
-\texttt{VLSM} & Variable-Length Subnet Masking
-\\ 
-\texttt{HTML} & HyperText Markup Language
- & & 
-\texttt{VM} & Virtual Machine
-\\ 
-\texttt{HTTP} & Hypertext Transfer Protocol
- & & 
-\texttt{VRF} & Virtual Routing Forwarding
-\\ 
-\texttt{ICMP} & Internet Control Message Protocol
- & & 
-\texttt{VTP} & VLAN Trunking Protocol
-\\ 
-\texttt{IMAP} & Internet Message Access Protocol
- & & 
-\texttt{xDSL} & x Digital Subscriber Line
-\\ 
-\texttt{IP} & Internet Protocol
- & & 
-\texttt{XML} & eXtensible Markup Language
-\\ 
-\texttt{IPBX} & Internet Protocol Private Branch eXchange
- & & 
-\texttt{XSS} & cross-Site Scripting
-\\ 
-\texttt{JSON} & JavaScript Object Notation
- & & 
-\texttt{2D} & deux Dimensions
-\\ 
-\texttt{LAN} & Local Area Network
- & & 
-\texttt{3D} & trois Dimensions
-\\ 
-\texttt{LED} & Light-Emitting Diode
- & & 
-\texttt{4G} & 4th Generation
-\\ 
-\texttt{MAC} & Media Access Control
- & & 
- & 
-\\ 
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{ACL}} & Access Control List\\ 
 \end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{ADSL}} & Asymmetric Digital Subscriber Line\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{ALU}} & Arithmetic and Logic Unit\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{ANSSI}} & Agence nationale de la sécurité des systèmes d'information\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{API}} & Application Programming Interface\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{APC}} & Approche Par Compétence\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{ARP}} & Address Resolution Protocol\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{BDD}} & Base De Données\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{CAN}} & Convertisseur Analogique-Numérique\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{CC}} & Copie Carbone\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{CCi}} & Copie Carbone invisible\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{CEM}} & Compatibilité ÉlectroMagnétique\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{CNA}} & Convertisseur Numérique-Analogique\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{CNIL}} & Commission Nationale de l'Informatique et des Libertés\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{CIDR}} & Classless Inter-Domain Routing\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{CSS}} & Cascading Style Sheets\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{CSV}} & Comma-Separated Values\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{CV}} & Curriculum Vitae\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{DDoS}} & Distributed Denial of Service\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{DHCP}} & Dynamic Host Configuration Protocol\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{DMZ}} & DeMilitarized Zone\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{DNS}} & Domain Name System\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{DOM}} & Document Object Model\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{DSI}} & Direction des Systèmes d'Information\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{DSP}} & Densité Spectrale de Puissance\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{DAB}} & Digital Audio Broadcasting\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{DVB-S}} & Digital Video Broadcasting Satellite\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{DVB-T}} & Digital Video Broadcasting Terrestre\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{EMILE}} & Enseignement d'une Matière par l'Intégration d'une Langue Etrangère\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{FFT}} & Fast Fourier Transform\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{FM}} & Frequency Modulation\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{FO}} & Fibre Optique\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{FOVI}} & Faux Ordres de Virements Internationaux\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{FTP}} & File Transfer Protocol\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{GBF}} & Générateur de Basses Fréquences\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{GPIO}} & General Purpose Input/Output\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{HiFi}} & High Fidelity\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{HTML}} & HyperText Markup Language\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{HTTP}} & Hypertext Transfer Protocol\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{ICMP}} & Internet Control Message Protocol\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{IMAP}} & Internet Message Access Protocol\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{IP}} & Internet Protocol\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{IPBX}} & Internet Protocol Private Branch eXchange\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{JSON}} & JavaScript Object Notation\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{LAN}} & Local Area Network\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{LED}} & Light-Emitting Diode\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{MAC}} & Media Access Control\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{MOOC}} & Massive Open Online Course\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{NAS}} & Network Attached Storage\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{NAT}} & Network Address Translation\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{NDP}} & Neighbor Discovery Protocol\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{NTP}} & Network Time Protocol\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{OS}} & Operating System\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{OSPF}} & Open Shortest Path First\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{PABX}} & Private Automatic Branch Exchange\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{PAT}} & Port Address Translation\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{PC}} & Personnal Computer\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{PERT}} & Program Evaluation and Review Technology\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{PME}} & Petite et Moyenne Entreprise\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{PoE}} & Power over Ethernet\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{POP}} & Post Office Protocol\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{PPP}} & Projet Professionnel et Personnel\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{PXE}} & Pre-boot eXecution Environment\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{QCM}} & Questionnaire à Choix Multiples\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{RGPD}} & Règlement Général pour la Protection des Données\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{RSTP}} & Rapid Spanning Tree Protocol\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{RTP}} & Real-Time Transport Protocol\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{SGBD}} & Système de Gestion de Bases de Données\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{SMTP}} & Simple Mail Transfer Protocol\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{SQL}} & Structured Query Language\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{SSH}} & Secure SHell\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{STP}} & Spanning Tree Protocol\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{TELNET}} & TELecommunication NETwork\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{TCP}} & Transmission Control Protocol\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{TDM}} & Time Division Multiplexing\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{TFTP}} & Trivial File Transfer Protocol\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{ToIP}} & Telephony over Internet Protocol\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{TV}} & TéléVision\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{UDP}} & User Datagram Protocol\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{UML}} & Unified Modeling Language\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{URL}} & Uniform Resource Locator\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{USB}} & Universal Serial Bus\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{VLAN}} & Virtual Local Area Network\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{VLSM}} & Variable-Length Subnet Masking\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{VM}} & Virtual Machine\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{VRF}} & Virtual Routing Forwarding\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{VTP}} & VLAN Trunking Protocol\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{xDSL}} & x Digital Subscriber Line\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{XML}} & eXtensible Markup Language\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{XSS}} & cross-Site Scripting\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{2D}} & deux Dimensions\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{3D}} & trois Dimensions\\ 
+\end{tabular}
+
+\begin{tabular}{rp{6.5cm}} 
+\makebox[1.5cm][r]{\texttt{4G}} & 4th Generation\\ 
+\end{tabular}
+
